# hass-smartbox

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  codecov.yml  flake.nix  hacs.json  pyproject.toml  requirements_common.txt  requirements_test.txt  tox.ini
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: python-nix.yml  python-package.yml
custom_components/smartbox/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  diagnostics.py  entity.py  icons.json  manifest.json  model.py  models.py  number.py  sensor.py  services.yaml  strings.json  switch.py  system_health.py  types.py
custom_components/smartbox/translations/: en.json  es.json  fr.json
scripts/: pre-commit-check.sh
tests/: __init__.py  conftest.py  const.py  mocks.py  test___init__.py  test_climate.py  test_config_flow.py  test_init.py  test_model.py  test_models.py  test_number.py  test_sensor.py  test_switch.py  test_test_utils.py  test_utils.py  test_version.py
